<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/text_L"
        android:textColor="@color/mint"
        android:background="@color/dark_black"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_S"
        android:text="@string/text_Name"
        android:textSize="@dimen/text_M"/>

    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_XXL"
        android:layout_marginRight="@dimen/margin_XXL"
        android:layout_marginBottom="@dimen/margin_XXS"
        android:hint="성명을 입력하세요!"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_S"
        android:text="@string/text_Kg"
        android:textSize="@dimen/text_M"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Kg"
        android:inputType="numberDecimal"
        android:layout_marginLeft="@dimen/margin_XXL"
        android:layout_marginRight="@dimen/margin_XXL"
        android:layout_marginBottom="@dimen/margin_XXS"
        android:hint="체중을 입력하세요!"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_S"
        android:text="@string/text_Cm"
        android:textSize="@dimen/text_M"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Cm"
        android:inputType="numberDecimal"
        android:layout_marginLeft="@dimen/margin_XXL"
        android:layout_marginRight="@dimen/margin_XXL"
        android:hint="신장을 입력하세요!"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_Text"
        android:textSize="@dimen/text_M"
        android:textColor="@color/yellow"
        android:layout_marginLeft="@dimen/margin_S"
        android:layout_marginRight="@dimen/margin_S"
        android:id="@+id/btn_result"/>
    <ImageSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_M"
        android:layout_marginBottom="@dimen/margin_M"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_M"
        android:id="@+id/result"/>
</LinearLayout>